Lots of changes
- Improved GameArea#getEntities handling, so now not using streams, instead we use immutablelist
- Now world time is saving before game start in zombie apocalypse type
- Getting nearby entities now works on 1.8.1 versions
- Fixed when the pressure plate is not works correctly
- Fix when the players in game freeze can break blocks
- Some optimizations for game area to make sure the player is not outside of the area.
- Pressure mine can now be exploded when another explosion is primed
- Misc optimizations for game timer in zombie apocalypse type
- Now on game join the arrows will remove from player bodies in 1.16+ versions
- Improved zombie spawning, now trying to not spawn only in one place, and limiting how many baby zombie can spawn
- Fix for combatAxe when interacted with blocks throws exceptions
- Added 1.16.2 sounds
- Now you can modify the damage of rage arrow
- Fix NPE during player stats save
- Added support for java 12+ (avoiding deprecated methods)